--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
     "prettier": "^3.0.2",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.1.6"
