--- a/.prettierrc
+++ b/.prettierrc
@@ -1,20 +1,5 @@
 {
-    "parser": "@typescript-eslint/parser",
-    "parserOptions": {
-      "ecmaVersion": 12,
-      "sourceType": "module"
-    },
-    "plugins": ["@typescript-eslint"],
-
-    "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
-  
-    "rules": {
-      "@typescript-eslint/no-unused-vars": "error",
-      "@typescript-eslint/consistent-type-definitions": ["error", "type"]
-    },
-  
-    "env": {
-      "browser": true,
-      "es2021": true
-    }
-  }
+  "semi": true,
+  "singleQuote": true,
+  "arrowParens": "avoid"
+}
