--- a/.eslintrc
+++ b/.eslintrc
@@ -11,6 +11,7 @@
     "no-console":"error",
     "no_undef": "error",
     "no-unused-expressions": "error",
+    "no-unreachable": "error",
     "consistent-type-definitions": ["error", "type"]
   },
   "env": {
