--- a/.eslintrc
+++ b/.eslintrc
@@ -5,14 +5,14 @@
     "sourceType": "module"
   },
   "plugins": ["@typescript-eslint"],
-  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended"],
+  "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "rules": {
-    "no-unused-vars": "error",
-    "no-console":"error",
-    "no_undef": "error",
-    "no-unused-expressions": "error",
-    "no-unreachable": "error",
-    "consistent-type-definitions": ["error", "type"]
+    // "no-unused-vars": "error",
+    // "no-console":"error",
+    // "no-undef":"error",
+    // "no-unused-expressions":"error",
+    // "no-unreachable":"error",
+    // "consistent-type-definitions": ["error", "type"]
   },
   "env": {
     "browser": true,
