--- a/.eslintrc
+++ b/.eslintrc
@@ -7,15 +7,19 @@
   "plugins": ["@typescript-eslint"],
   "extends": ["eslint:recommended", "plugin:@typescript-eslint/recommended", "prettier"],
   "rules": {
-    // "no-unused-vars": "error",
-    // "no-console":"error",
-    // "no-undef":"error",
-    // "no-unused-expressions":"error",
-    // "no-unreachable":"error",
-    // "consistent-type-definitions": ["error", "type"]
+    "no-unused-vars": "error",
+    "prefer-const": "error",
+    "no-unused-expressions": "error",
+    "no-undef": "error",
+    "no-console": "warn",
+    "@typescript-eslint/consistent-type-definitions": ["error", "type"]
   },
   "env": {
     "browser": true,
-    "es2021": true
+    "es2021": true,
+    "node": true
+  },
+  "globals": {
+    "process": "readonly"
   }
 }
