--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "dotenv": "^16.3.1",
     "eslint": "^8.47.0",
     "express": "^4.18.2",
+    "http-status": "^1.6.2",
     "mongoose": "^7.4.3",
     "winston": "^3.10.0",
-    "winston-daily-rotate-file": "^4.7.1"
+    "winston-daily-rotate-file": "^4.7.1",
+    "zod": "^3.22.2"
   }
 }
