--- a/.env
+++ b/.env
@@ -4,3 +4,5 @@ PORT=5000
 DATABASE_URL=mongodb+srv://asif:asif12345@cluster0.h5pr3.mongodb.net/university-management?retryWrites=true&w=majority
 
 DEFAULT_STUDENT_PASS=university123!@#
+DEFAULT_FACULTY_PASS=universityfaculty123!@#
+DEFAULT_ADMIN_PASS=universityadmin123!@#
