--- a/.env
+++ b/.env
@@ -6,3 +6,11 @@ DATABASE_URL=mongodb+srv://asif:asif12345@cluster0.h5pr3.mongodb.net/university-
 DEFAULT_STUDENT_PASS=university123!@#
 DEFAULT_FACULTY_PASS=universityfaculty123!@#
 DEFAULT_ADMIN_PASS=universityadmin123!@#
+
+BCRYPT_SALT_ROUNDS=12
+
+JWT_SECRET= very-secrect
+JWT_EXPIRES_IN = 1d
+JWT_REFRESH_SECRET = very-refresh_secrect 
+JWT_REFRESH_EXPIRES_IN = 365d
+
